--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 181,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,6 +29,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from catboost import CatBoostClassifier\n",
+    "from gensim.models import Word2Vec\n",
     "\n",
     "import re\n"
    ],
@@ -122,8 +123,9 @@
     "def drop_duplications_preparation(tweet):\n",
     "    tweet_wituot_digits = re.sub(r\"\\d+\", '', tweet.lower())\n",
     "    tweet_wituot_digits_and_punctuation = re.sub(r'[^\\w\\s]', '', tweet_wituot_digits)\n",
-    "    tweet_wituot_digits_and_punctuation_and_add_spaces =  re.sub(' +', ' ', tweet_wituot_digits_and_punctuation)\n",
+    "    tweet_wituot_digits_and_punctuation_and_add_spaces = re.sub(' +', ' ', tweet_wituot_digits_and_punctuation)\n",
     "    return tweet_wituot_digits_and_punctuation_and_add_spaces.strip()\n",
+    "\n",
     "\n",
     "df['text'] = df['text'].apply(drop_duplications_preparation)"
    ],
@@ -233,7 +235,6 @@
    "source": [
     "%%time\n",
     "from tokenizer import remove_stop_words, stem_tokens, lemmatize_tokens, spell_tokens, get_tokenizer\n",
-    "\n",
     "\n",
     "preprocessing_methods = {\n",
     "    \"Just tokenized\":                                     [],\n",
@@ -1458,7 +1459,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Different classification approaches"
+    "## Different classification approaches"
    ],
    "metadata": {
     "collapsed": false,
@@ -1649,51 +1650,37 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "xtr, ytr, xte, yte = train_test_split(w2c)\n",
-    "model = RandomForestClassifier(**best_params)\n",
-    "model.fit(xtr, ytr)\n",
+    "## Word2vect"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 15s, sys: 1.11 s, total: 4min 16s\n",
+      "Wall time: 4min 24s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "\n",
-    "print(\"accuracy:\", accuracy_score(model.predict(xte), yte))"
+    "methods = preprocessing_methods['Spelled and stemmed']\n",
+    "tokenizer = get_tokenizer(methods)\n",
+    "sentences = [tokenizer(tweet) for tweet in train_df['text']]\n",
+    "test_sentences = [tokenizer(tweet) for tweet in test_df['text']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -1704,13 +1691,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 298,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 47s, sys: 5.56 s, total: 4min 53s\n",
+      "Wall time: 2min 44s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(73544164, 92844000)"
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = CatBoostClassifier()\n",
-    "model.fit(xtr, ytr, silent=True)\n",
+    "%%time\n",
     "\n",
-    "print(\"accuracy:\", accuracy_score(model.predict(xte), yte))"
+    "num_features = 300\n",
+    "\n",
+    "model = Word2Vec(\n",
+    "    workers=4,\n",
+    "    vector_size=num_features,\n",
+    "    min_count=1,\n",
+    "    sample=1e-3\n",
+    ")\n",
+    "\n",
+    "model.build_vocab(sentences)\n",
+    "model.train(sentences, total_examples=len(sentences), epochs=4000)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1721,9 +1734,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 288,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "twitter [('sir', 0.3634018003940582), ('logotyp', 0.31645673513412476), ('tendulkar', 0.3134271502494812)]\n",
+      "love [('miss', 0.3488241732120514), ('need', 0.2986733615398407), ('dont', 0.29372280836105347), ('glad', 0.2822946310043335), ('have', 0.2746826708316803)]\n",
+      "trump [('defianc', 0.3880469799041748), ('sharp', 0.36645200848579407), ('salli', 0.35442009568214417), ('father', 0.34890905022621155), ('advis', 0.3322913348674774), ('lawyer', 0.3256087005138397), ('waterway', 0.3191172778606415), ('flame', 0.31123027205467224), ('tripl', 0.30751481652259827), ('era', 0.30501630902290344)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('twitter', model.wv.most_similar('twitter', topn=3))\n",
+    "print('love', model.wv.most_similar('love', topn=5))\n",
+    "print('trump', model.wv.most_similar('trump', topn=10))"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1733,9 +1760,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 289,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def make_feature_vec(words, model, num_features):\n",
+    "    feature_vec = np.zeros((num_features,), dtype=\"float32\")\n",
+    "    nwords = 0.\n",
+    "    index2word_set = set(model.wv.index_to_key)\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in index2word_set:\n",
+    "            nwords = nwords + 1.\n",
+    "            feature_vec = np.add(feature_vec, model.wv[word])\n",
+    "\n",
+    "    feature_vec = np.divide(feature_vec, nwords)\n",
+    "    return feature_vec\n",
+    "\n",
+    "\n",
+    "def get_avg_feature_vecs(reviews, model, num_features):\n",
+    "    counter = 0\n",
+    "    review_feature_vecs = np.zeros((len(reviews), num_features), dtype='float32')\n",
+    "\n",
+    "    for review in reviews:\n",
+    "        review_feature_vecs[counter] = make_feature_vec(review, model, num_features)\n",
+    "        counter = counter + 1\n",
+    "    return review_feature_vecs"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1745,9 +1795,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 299,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/17/kvk5ywwd5g7gfx6zjhfz859c0000gn/T/ipykernel_11093/3778286644.py:11: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  feature_vec = np.divide(feature_vec, nwords)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate average feature vectors for training and test sets\n",
+    "clean_train_reviews = []\n",
+    "for review in sentences:\n",
+    "    clean_train_reviews.append(review)\n",
+    "trainDataVecs = get_avg_feature_vecs(clean_train_reviews, model, num_features)\n",
+    "\n",
+    "clean_test_reviews = []\n",
+    "for review in test_sentences:\n",
+    "    clean_test_reviews.append(review)\n",
+    "testDataVecs = get_avg_feature_vecs(clean_test_reviews, model, num_features)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1757,9 +1827,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 292,
    "outputs": [],
-   "source": [],
+   "source": [
+    "trainDataVecs[np.isnan(trainDataVecs) == True] = 0.\n",
+    "trainDataVecs[np.isinf(trainDataVecs) == True] = 0.\n",
+    "testDataVecs[np.isnan(testDataVecs) == True] = 0.\n",
+    "testDataVecs[np.isinf(testDataVecs) == True] = 0."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Random forest with best params"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 11.2 s, sys: 60.6 ms, total: 11.2 s\n",
+      "Wall time: 12.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "forest = RandomForestClassifier(random_state=0, class_weight='balanced', max_depth=189, n_estimators=195)\n",
+    "forest = forest.fit(trainDataVecs, train_df['type'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.7587719298245614\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_true = test_df['type']\n",
+    "y_pred = forest.predict(testDataVecs)\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "print(f'accuracy: {accuracy}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### CatBoost"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "outputs": [],
+   "source": [
+    "cat_boost = CatBoostClassifier()\n",
+    "cat_boost = cat_boost.fit(trainDataVecs, train_df['type'], silent=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.814327485380117\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_true = test_df['type']\n",
+    "y_pred = cat_boost.predict(testDataVecs)\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "print(f'accuracy: {accuracy}')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
