--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 300,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 301,
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 302,
    "outputs": [],
    "source": [
     "def drop_duplications_preparation(tweet):\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 303,
    "outputs": [
     {
      "name": "stdout",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 304,
    "outputs": [
     {
      "name": "stdout",
@@ -177,15 +177,15 @@
      "text": [
       "train_df count types\n",
       "(2733, 2)\n",
-      " 0    1184\n",
-      " 1     779\n",
-      "-1     770\n",
+      " 0    1181\n",
+      " 1     780\n",
+      "-1     772\n",
       "Name: type, dtype: int64\n",
       "test_df count types\n",
       "(684, 2)\n",
-      " 0    286\n",
-      "-1    204\n",
-      " 1    194\n",
+      " 0    289\n",
+      "-1    202\n",
+      " 1    193\n",
       "Name: type, dtype: int64\n"
      ]
     }
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 305,
    "outputs": [],
    "source": [
     "methods = preprocessing_methods['Spelled and stemmed']\n",
@@ -1497,23 +1497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 306,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 50s, sys: 710 ms, total: 2min 51s\n",
-      "Wall time: 2min 52s\n"
+      "CPU times: user 1min 42s, sys: 179 ms, total: 1min 42s\n",
+      "Wall time: 1min 42s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "Pipeline(steps=[('vectorizer',\n                 TfidfVectorizer(tokenizer=<function <lambda> at 0x7fe96c9415e0>)),\n                ('model',\n                 RandomForestClassifier(class_weight='balanced', max_depth=189,\n                                        n_estimators=195, random_state=0))])"
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1527,7 +1519,7 @@
     "    ('model', model),\n",
     "])\n",
     "\n",
-    "pipline.fit(train_df['text'], train_df['type'])"
+    "pipline = pipline.fit(train_df['text'], train_df['type'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -1538,15 +1530,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 307,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.8801169590643275\n",
-      "CPU times: user 27.4 s, sys: 46.5 ms, total: 27.4 s\n",
-      "Wall time: 27.5 s\n"
+      "accuracy: 0.8976608187134503\n",
+      "CPU times: user 17.9 s, sys: 19.6 ms, total: 18 s\n",
+      "Wall time: 18 s\n"
      ]
     }
    ],
@@ -1580,23 +1572,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 308,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 30s, sys: 5.69 s, total: 4min 35s\n",
-      "Wall time: 1min 37s\n"
+      "CPU times: user 5min 14s, sys: 6.56 s, total: 5min 21s\n",
+      "Wall time: 2min 16s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "Pipeline(steps=[('vectorizer',\n                 TfidfVectorizer(tokenizer=<function <lambda> at 0x7fe955b604c0>)),\n                ('model',\n                 <catboost.core.CatBoostClassifier object at 0x7fe978583d30>)])"
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1610,7 +1594,7 @@
     "    ('model', model),\n",
     "])\n",
     "\n",
-    "pipline.fit(train_df['text'], train_df['type'], model__silent=True)"
+    "pipline = pipline.fit(train_df['text'], train_df['type'], model__silent=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1621,15 +1605,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 309,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.8611111111111112\n",
-      "CPU times: user 27.1 s, sys: 43.6 ms, total: 27.1 s\n",
-      "Wall time: 27.1 s\n"
+      "accuracy: 0.8903508771929824\n",
+      "CPU times: user 35.5 s, sys: 109 ms, total: 35.6 s\n",
+      "Wall time: 35.8 s\n"
      ]
     }
    ],
